# claude-code-config

./: CLAUDE_BASE.md  README.md  pyproject.toml  settings.json
agents/: debugger.md  planner.md  quality-enforcer.md  reviewer.md
commands/: continue-feature.md  create-worktree.md  merge.md  new-feature.md  planner.md  pr-walkthrough.md  quality-enforcer.md  reviewer.md  sync-claude-submodule.md  sync.md
commands/claude_helper/: README.md  clearComparisons.md  compareHead.md  compareReferences.md  ping.md  setTerminalTitle.md
hooks/: install_vscode_extension.sh  notification_on_stop.sh
knowledge/: architecture.md  github_cli_usage.md  plan_directory_structure.md  planning_guidelines.md  planning_new_feature.md  replanning_existing_feature.md  uv.md
