[project]
name = "claude-code-config"
version = "0.1.0"
description = "Claude Code configuration files"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "claude_code_config/agents"
"commands" = "claude_code_config/commands"
"hooks" = "claude_code_config/hooks"
"coding_style.md" = "claude_code_config/coding_style.md"
"settings.json" = "claude_code_config/settings.json"
